# ggml

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ggml-config.cmake  ggml.pc
_codeql_build_dir/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmarks/: CMakeLists.txt  benchmark-mul-mat.cpp
ci/: run.sh
cmake/: ggml-config.cmake.in
docs/: gguf.md  ops.md
docs/ops/: rtx3090.txt  ryzen3800.txt
examples/: common.cpp  stb_image.h
examples/gpt-2/: README.md  download-ggml-model.sh  main-backend.cpp
examples/simple/: CMakeLists.txt  simple-backend.cpp
include/: ggml-alloc.h  ggml.h
patches/: README.md
scripts/: create_ops_docs.py  release.sh  sync-llama.last  sync-whisper.last
src/: CMakeLists.txt  ggml-adreno.h  ggml-alloc.c  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml-opt.cpp  ggml-quants.c  ggml-threading.cpp  ggml-threading.h  ggml.c  gguf.cpp
tests/: CMakeLists.txt  test-adreno-version.cpp  test-backend-ops.cpp  test-conv1d-dw-c1.cpp  test-conv1d-dw-c2.cpp  test-conv2d.cpp  test-customop.c  test-depthwise-conv2d.cpp  test-gguf.cpp  test-interpolate.cpp  test-oom.cpp  test-pad-reflect-1d.cpp  test-rms-norm-back-inplace.cpp  test-soft-max-back-inplace.cpp  test-upscale.cpp  test-vec1.c
(+108 files in other folders)
